<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/margin_medium"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/text_description"
                        style="@style/text_description"
                        android:text="@string/description_albums" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hurdles"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/text_hurdles"
                        style="@style/text_description"
                        android:text="@string/hurdles_albums" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/solution"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/text_solution"
                        style="@style/text_description"
                        android:text="@string/solution_albums" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/action_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_view"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/button_one_album"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textview_musicplayer"
                android:layout_width="match_parent"
                android:layout_height="?listPreferredItemHeight"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccentLight"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/margin_small"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="64dp"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/now_playing"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/player_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:src="@drawable/ic_play_circle_filled_white_24dp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>